[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/picker_arrow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/PickerTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Menus/Buttons/ButtonTypeC.gd" type="Script" id=3]

[node name="ButtonTypeC" type="HBoxContainer"]
margin_right = 472.0
margin_bottom = 56.0
focus_mode = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_right = 230.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
action_mode = 0
text = "Test"
flat = true
align = 0

[node name="PickerArrowL" type="TextureButton" parent="."]
margin_left = 234.0
margin_right = 257.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
action_mode = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3
flip_h = true

[node name="Selection" type="Button" parent="."]
margin_left = 261.0
margin_right = 445.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
custom_constants/hseparation = 10
action_mode = 0
text = "Test"
flat = true

[node name="PickerArrowR" type="TextureButton" parent="."]
margin_left = 449.0
margin_right = 472.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
action_mode = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PickerArrowL" to="." method="_on_PickerArrowL_pressed"]
[connection signal="pressed" from="PickerArrowR" to="." method="_on_PickerArrowR_pressed"]
